--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   path_provider: ^2.0.11
   sqflite: ^2.0.3+1
+  camera_camera: ^2.0.2
+  image_picker: ^0.8.6
+  
 
 dev_dependencies:
   flutter_test:
